test/files/neg/t5956.scala
object O { case class C[T](); class C() }
object T { case class C[T](); case class C() }
